Finish differential part